--- a/static/css/index.css
+++ b/static/css/index.css
@@ -133,7 +133,7 @@ body {
   background: #9c27b0b5 center center no-repeat;
 }
 
-.slider-page {
+.slider-pagination .slider-page {
   background: #9c27b0b5;
 }
 
